# train_mapping

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile.backend  NIGHTLY_LOG.md  PLAN_TEST_PATH  PROJECT_SPEC.md  README.md  docker-compose.prod.yml  docker-compose.yml  fixed_errors.md  package-lock.json  package.json  setup.ps1  setup.sh  tsconfig.json  updated_features.md
.claude/: launch.json  settings.local.json
analytics-go/: Dockerfile  go.mod  main.go
analytics-py/: Dockerfile  active_alerts.py  alert_index.py  anomaly.py  app.py  build_goldenset.py  build_pretrain.py  eta_features.json  eta_model.json  eval_pretrain.py  featurize.py  graph_dataset.py  graph_edges.py  graph_experiment.py  graph_model.py  mta_history.py  mta_ridership.py  nyc311.py  requirements-graph.txt  requirements-train.txt  requirements.txt  server.py  socrata.py  train_eta.py  weather.py
core/: diag.ts  interpolate.ts
dashboard/: Dockerfile  app.js  config.js  index.html  serve.mjs
data/: SCHEMA.md
docs/: architecture.html  explainer.html  hub.html
history/: backtest-report.ts  db.ts  export.ts  ledger-report.ts  ledger.ts
infra/: Caddyfile  backup.sh  nginx.conf  static.mjs
ingest/: nyc-alerts.ts  nyc-bus.ts  nyc.ts
kalman-rs/: Cargo.toml  Dockerfile
kalman-rs/src/: main.rs
preprocess/: fetch-osm-layers.ts  match-osm-elevation.ts  nyc.ts
scripts/: backend-alt.mjs  dev-all.mjs  gen-dashboard-config.mts
server/: bridge.ts  index.ts
shared/: config.ts  features.json  geo.ts  occupancy.ts  types.ts  validate.ts
web/: index.html  package-lock.json  package.json
(+16 files in other folders)
