[package]
name = "kalman-rs"
version = "0.1.0"
edition = "2021"
description = "1D constant-velocity Kalman filter sidecar for the transit tracker (present-state estimation + uncertainty)"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
